fix z-index

--- a/angular/src/app/answer-book-annotator/answer-book-annotator.component.less
+++ b/angular/src/app/answer-book-annotator/answer-book-annotator.component.less
@@ -7,7 +7,7 @@
   height: 100%;
 
   background: #000000cc;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .close.button{
